--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/Index">Index</a>
-            <a href="{{ site.baseurl }}/Educacion">Educación</a>
+            <a href="{{ site.baseurl }}/educación">Educación</a>
           </nav>
         </header>
       </div>
