--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/about">Acerca de</a>
             <a href="{{ site.baseurl }}/Index">Index</a>
             <a href="{{ site.baseurl }}/educación">Educación</a>
           </nav>
